test/FAIL/loadcmd/invalid_name/07_test_load.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="wrong arguments("nom"=nom_fichier)"
#-------

load bok.o 0x1000
